Bug 143058 - kget downloads all files between two selected files
Summary: kget downloads all files between two selected files
Status: RESOLVED FIXED
Alias: None
Product: kget
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KGet bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-03-16 15:01 UTC by Dexter Magnific
Modified: 2007-03-30 20:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dexter Magnific 2007-03-16 15:01:58 UTC
Version:           v0.8.5 (using KDE 3.5.6, Gentoo)
Compiler:          gcc version 3.4.6 (Gentoo 3.4.6-r1, ssp-3.4.5-1.0, pie-8.7.9)
OS:                Linux (i686) release 2.6.19-gentoo-r4

Hi,

when using the KGet download manager from konqueror and doing some search in the Search bar and then selecting files (with shift+arrow) and downloading selected files, KGet downloads also 'hidden' entries (files that would be present if search bar is empty).
When selecting files that way and removing search criteria, we can notice that KGet selected also non wanted entries. This is a wrong behavior.

Thanks
Comment 1 Dexter Magnific 2007-03-16 15:06:12 UTC
To reproduce this bug, go for example to http://www.beryl-project.org/releases.php, select from konqueror List All Links, then type in the KGet search bar "0.2.0.tar.bz2" to download the latest version and select with shift the tarballs. You'll notice that kget will download the 0.2.0 version and also the 0.9999 versions. remove the search criteria without removing the selection and you'll see that non wanted tarballs are selected. This behaviour don't happen when selecting tarballs individually (with CTRL for example).
Comment 2 Urs Wolfer 2007-03-30 20:26:17 UTC
SVN commit 648195 by uwolfer:

Add the search line again in the new version. Requested by Coldpizza.

CCMAIL: coldpizza.rockstation@gmail.com

It closes also
BUG: 143058

 M  +12 -3     kget_linkview.cpp  


--- trunk/KDE/kdenetwork/kget/extensions/konqueror/kget_linkview.cpp #648194:648195
@@ -19,12 +19,14 @@
 #include <klocale.h>
 #include <kmessagebox.h>
 #include <ktoolbar.h>
+#include <KTreeWidgetSearchLine>
 
 #include <QAction>
 #include <QPixmap>
 #include <QProcess>
 #include <QTreeWidget>
 #include <QtDBus>
+#include <QVBoxLayout>
 
 KGetLinkView::KGetLinkView( QWidget *parent )
     : KMainWindow( parent )
@@ -56,11 +58,18 @@
     m_treeWidget->setRootIsDecorated(false);
     m_treeWidget->setSortingEnabled(true);
     m_treeWidget->setAllColumnsShowFocus(true);
+    m_treeWidget->setColumnWidth(0, 200); // make the filename column bigger by default
 
-    setCentralWidget(m_treeWidget);
+    KTreeWidgetSearchLine *searchLine = new KTreeWidgetSearchLine(this, m_treeWidget);
 
-    // setting a fixed (not floating) toolbar
-    toolBar()->setMovable(false);
+    QVBoxLayout *mainLayout = new QVBoxLayout;
+    mainLayout->addWidget(searchLine);
+    mainLayout->addWidget(m_treeWidget);
+
+    QWidget *mainWidget = new QWidget(this);
+    mainWidget->setLayout(mainLayout);
+    setCentralWidget(mainWidget);
+
     // setting Text next to Icons
     toolBar()->setToolButtonStyle(Qt::ToolButtonTextBesideIcon);