Add the search line again in the new version. Requested by Coldpizza.

CCMAIL: coldpizza.rockstation@gmail.com

It closes also
BUG: 143058

svn path=/trunk/KDE/kdenetwork/kget/; revision=648195